--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
   "name": "notification-system",
   "version": "1.0.0",
-  "main": "dist/index.js",
+  "main": "dist/server.js",
   "scripts": {
-    "start": "tsc && node dist/index.js",
+    "start": "tsc && node dist/server.js",
     "build": "tsc",
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "update-db": "npx prisma generate && npx prisma db push"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.0.10",
     "prisma": "^6.11.1",
     "ts-node": "^10.9.2",
@@ -20,6 +23,9 @@
   "dependencies": {
     "@prisma/client": "^6.11.1",
     "@types/express": "^5.0.3",
-    "express": "^5.1.0"
+    "bcryptjs": "^3.0.2",
+    "dotenv": "^17.0.1",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2"
   }
 }
